Updated locations to have placeholder "Enter value" text instead of deceptive "USA" placeholder. Updated font color for password fail text to match EULA link. Updated placeholder profile photo image Files modified - [CompanyProfile.html,CompanyMunicipalities.variables.json,VendorApplication.html,UserCreation.html,MyProfile.variables.json]

--- a/src/main/webapp/pages/UserCreation/UserCreation.html
+++ b/src/main/webapp/pages/UserCreation/UserCreation.html
@@ -4,8 +4,8 @@
         <wm-page-content columnwidth="12" name="page_content1">
             <wm-wizard name="wizard1" horizontalalign="left" on-done="wizard1Done($scope, steps)" on-cancel="Variables.NewUserToLogin.invoke()">
                 <wm-wizardstep name="wizardstep1" title="Account Setup">
-                    <wm-liveform novalidate="false" errormessage="User already exists" title="Register for CivicXpress" iconclass="wi wi-pencil" defaultmode="Edit" dataset="bind:Variables.CreateUser.dataSet" captionalign="left" captionposition="top" name="liveform2" insertmessage="Your account has been created. Please proceed to Login"
-                    updatemessage="User updated successfully" deletemessage="User deleted successfully" on-success="liveform2Success($event, $operation, $data)">
+                    <wm-liveform novalidate="false" errormessage="User already exists" title="Register for CivicXpress" iconclass="wi wi-pencil" defaultmode="Edit" dataset="bind:Variables.CreateUser.dataSet" captionalign="left" captionposition="top" name="liveform2"
+                    insertmessage="Your account has been created. Please proceed to Login" updatemessage="User updated successfully" deletemessage="User deleted successfully" on-success="liveform2Success($event, $operation, $data)">
                         <wm-layoutgrid columns="2" name="layoutgrid2">
                             <wm-gridrow name="gridrow6">
                                 <wm-gridcolumn columnwidth="6" name="gridcolumn11">
@@ -36,7 +36,8 @@
                                     <wm-form-field name="city" displayname="City" show="true" primary-key="false" generator="assigned" key="city" type="string" required="required" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                 </wm-gridcolumn>
                                 <wm-gridcolumn columnwidth="6" name="gridcolumn18">
-                                    <wm-form-field name="states" displayname="State" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" required="false" widget="select" placeholder="Search" orderby="stateName:asc" displayexpression="stateName"></wm-form-field>
+                                    <wm-form-field name="states" displayname="State" show="true" primary-key="false" generator="assigned" key="states" type="list" is-related="true" required="false" widget="select" placeholder="Search" orderby="stateName:asc"
+                                    displayexpression="stateName"></wm-form-field>
                                 </wm-gridcolumn>
                             </wm-gridrow>
                             <wm-gridrow name="gridrow10">
@@ -44,7 +45,8 @@
                                     <wm-form-field name="postalCode" displayname="Postal Code" show="true" primary-key="false" generator="assigned" key="postalCode" type="string" required="false" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
                                 </wm-gridcolumn>
                                 <wm-gridcolumn columnwidth="6" name="gridcolumn20">
-                                    <wm-form-field name="country" displayname="Country" show="true" primary-key="false" generator="assigned" key="country" type="string" required="false" widget="text" maxchars="255" inputtype="text" placeholder="Enter value" defaultvalue="USA" readonly="false"></wm-form-field>
+                                    <wm-form-field name="country" displayname="Country" show="true" primary-key="false" generator="assigned" key="country" type="string" required="false" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
+                                    defaultvalue="USA" readonly="false"></wm-form-field>
                                 </wm-gridcolumn>
                             </wm-gridrow>
                             <wm-gridrow name="gridrow21_1" padding="3em unset unset unset">
@@ -52,9 +54,9 @@
                                     <wm-label padding="unset 0.5em" name="label12_1" caption="Please upload an image to use as your profile photo."></wm-label>
                                 </wm-gridcolumn>
                             </wm-gridrow>
-                            <wm-gridrow name="gridrow21" padding="unset unset unset 0.5em">
+                            <wm-gridrow name="gridrow21">
                                 <wm-gridcolumn columnwidth="12" name="gridcolumn31_1">
-                                    <wm-picture name="picture1" width="200" height="200"></wm-picture>
+                                    <wm-picture name="picture1" width="200" height="200" picturesource="resources/images/imagelists/fa-user-170.png" margin="unset unset 0.5em 0.5em"></wm-picture>
                                 </wm-gridcolumn>
                             </wm-gridrow>
                             <wm-gridrow name="gridrow1" padding="unset unset unset 0.5em">
@@ -80,8 +82,8 @@
                                     <wm-composite name="composite5">
                                         <wm-label class="col-md-3 form-control-static" name="label8" caption="Municipality Search" width="20%" fontweight="bold"></wm-label>
                                         <wm-container class="col-md-9" name="container5" width="80%">
-                                            <wm-search name="textSearchMunicipalities" placeholder="Search by Municipality Name" dataset="bind:Variables.GetMunicipalities.dataSet" searchkey="municipalityName" displaylabel="municipalityName" displayimagesrc="logo" datafield="All Fields" required="false"
-                                            width="100%" type="autocomplete" orderby="municipalityName:asc" on-select="textSearchMunicipalitiesSelect($event, $scope, selectedValue)"></wm-search>
+                                            <wm-search name="textSearchMunicipalities" placeholder="Search by Municipality Name" dataset="bind:Variables.GetMunicipalities.dataSet" searchkey="municipalityName" displaylabel="municipalityName" displayimagesrc="logo"
+                                            datafield="All Fields" required="false" width="100%" type="autocomplete" orderby="municipalityName:asc" on-select="textSearchMunicipalitiesSelect($event, $scope, selectedValue)"></wm-search>
                                         </wm-container>
                                     </wm-composite>
                                 </wm-gridcolumn>
@@ -122,7 +124,7 @@
                 <wm-wizardstep name="wizardstep3" title="Communication">
                     <wm-panel iconclass="wi wi-notifications" autoclose="outsideClick" name="panel2" title="Notification Frequency">
                         <wm-layoutgrid name="layoutgrid2_1" columns="1">
-                            <wm-gridrow name="gridrow22" padding="unset unset 1em unset">
+                            <wm-gridrow name="gridrow22">
                                 <wm-gridcolumn columnwidth="12" name="gridcolumn33">
                                     <wm-label padding="unset 0.5em" name="label13" caption="How often would you like to receive email notifications?"></wm-label>
                                 </wm-gridcolumn>
@@ -156,7 +158,8 @@
                                         <wm-container class="col-md-9" name="container3" width="300px">
                                             <wm-text name="textPwd" placeholder="Enter Password" type="password" regexp=".*" required="true" updateon="default" updatedelay="300" on-change="textPwdChange($event, $scope, newVal, oldVal)" autocomplete="false"></wm-text>
                                         </wm-container>
-                                        <wm-label padding="unset 0.5em" name="label12_2" show="bind:pwordRequirementsMet === false" caption="<i class=&quot;fa fa-warning&quot;></i> Password requirements have not been met. Please choose a strong password." color="#e81d1d" class="form-control-static"></wm-label>
+                                        <wm-label padding="unset 0.5em" name="label12_2" show="bind:pwordRequirementsMet === false" caption="<i class=&quot;fa fa-warning&quot;></i> Password requirements have not been met. Please choose a strong password."
+                                        color="#ef6262" class="form-control-static"></wm-label>
                                     </wm-composite>
                                 </wm-gridcolumn>
                             </wm-gridrow>
@@ -167,7 +170,7 @@
                                         <wm-container class="col-md-9" name="container4" width="300px">
                                             <wm-text name="textRePwd" placeholder="Enter Password" on-keyup="textRePwdKeyup($event, $scope)" type="password" required="true" regexp=".*" updateon="default" updatedelay="300" autocomplete="false" on-change="textRePwdChange($event, $scope, newVal, oldVal)"></wm-text>
                                         </wm-container>
-                                        <wm-label padding="unset 0.5em" name="label13_1" caption="<i class=&quot;fa fa-warning&quot;></i> Passwords don't match." show="bind:passwordsDontMatch === true" color="#e81d1d" class="form-control-static"></wm-label>
+                                        <wm-label padding="unset 0.5em" name="label13_1" caption="<i class=&quot;fa fa-warning&quot;></i> Passwords don't match." show="bind:passwordsDontMatch === true" color="#ef6262" class="form-control-static"></wm-label>
                                     </wm-composite>
                                 </wm-gridcolumn>
                             </wm-gridrow>
@@ -177,14 +180,15 @@
                         <wm-layoutgrid name="layoutgrid7">
                             <wm-gridrow name="gridrow23">
                                 <wm-gridcolumn columnwidth="12" name="gridcolumn32">
-                                    <wm-checkbox caption="bind:'By signing up for an account on CivicXpress, I acknowledge that I have read and accepted the <a href=&quot;&quot; class=&quot;eulaLink&quot;>End User License Agreement</a>'" class="col-md-9" name="checkboxAcceptEULA" required="true"></wm-checkbox>
+                                    <wm-checkbox caption="bind:'By signing up for an account on CivicXpress, I acknowledge that I have read and accepted the <a href=&quot;&quot; class=&quot;eulaLink&quot;>End User License Agreement</a>'" class="col-md-9"
+                                    name="checkboxAcceptEULA" required="true"></wm-checkbox>
                                 </wm-gridcolumn>
                             </wm-gridrow>
                         </wm-layoutgrid>
                     </wm-panel>
                     <wm-layoutgrid name="layoutgrid8">
                         <wm-gridrow name="gridrow25">
-                            <wm-gridcolumn columnwidth="12" name="gridcolumn36" padding="unset unset unset 1em">
+                            <wm-gridcolumn columnwidth="12" name="gridcolumn36">
                                 <div vc-recaptcha="" ng-model="recaptchaResponse"></div>
                             </wm-gridcolumn>
                         </wm-gridrow>
