--- a/src/main/webapp/pages/VendorApplication/VendorApplication.html
+++ b/src/main/webapp/pages/VendorApplication/VendorApplication.html
@@ -53,7 +53,8 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow27">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn33">
-                                        <wm-form-field name="country" displayname="Country" show="true" primary-key="false" generator="assigned" key="country" type="string" readonly="false" widget="text" maxchars="255" inputtype="text" placeholder="USA" defaultvalue="USA"></wm-form-field>
+                                        <wm-form-field name="country" displayname="Country" show="true" primary-key="false" generator="assigned" key="country" type="string" readonly="false" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"
+                                        defaultvalue="USA"></wm-form-field>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn34">
                                         <wm-form-field name="companyPhone" displayname="Company Phone" show="true" primary-key="false" generator="assigned" key="companyPhone" type="string" required="required" widget="text" maxchars="255" inputtype="text"
