slightly decreased dimensions of CX logo to be slightly narrower than "User Login" text Files modified - [Login.html,ForgotPassword.html,ResetPassword.html]

--- a/src/main/webapp/pages/ResetPassword/ResetPassword.html
+++ b/src/main/webapp/pages/ResetPassword/ResetPassword.html
@@ -4,7 +4,7 @@
             <wm-layoutgrid name="layoutgrid1">
                 <wm-gridrow name="gridrow3">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn8" horizontalalign="center">
-                        <wm-picture name="picture1" picturesource="resources/images/logos/CX-Logo.png" class="cx-logo" width="140px" height="71px" margin="2em unset"></wm-picture>
+                        <wm-picture name="picture1" picturesource="resources/images/logos/CX-Logo.png" class="cx-logo" width="132px" height="67px" margin="2em unset"></wm-picture>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow8">
@@ -27,8 +27,8 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow10">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn24">
-                                        <wm-form-field name="retypePassword" displayname="Confirm Password" widget="text" show="true" type="custom" placeholder="Enter Password" regexp="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*?&amp;])[A-Za-z\d$@$!%*?&amp;]{8,}" required="required" inputtype="password"
-                                        key="retypePassword"></wm-form-field>
+                                        <wm-form-field name="retypePassword" displayname="Confirm Password" widget="text" show="true" type="custom" placeholder="Enter Password" regexp="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*?&amp;])[A-Za-z\d$@$!%*?&amp;]{8,}"
+                                        required="required" inputtype="password" key="retypePassword"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
