--- a/src/main/webapp/pages/MyProfile/MyProfile.html
+++ b/src/main/webapp/pages/MyProfile/MyProfile.html
@@ -349,7 +349,7 @@
                     </wm-gridrow>
                     <wm-gridrow name="gridrow18">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn29">
-                            <wm-picture name="picture2" width="200" height="200"></wm-picture>
+                            <wm-picture name="picture2" width="200px" height="200px" picturesource="resources/images/imagelists/fa-user-170.png" margin="unset unset 0.5em unset"></wm-picture>
                             <wm-form-field name="photo" show="true" primary-key="false" generator="assigned" key="photo" type="blob" widget="upload" maxchars="255" on-click="photoClick($event, $scope)" filetype="image"></wm-form-field>
                         </wm-gridcolumn>
                     </wm-gridrow>
