--- a/src/main/webapp/pages/topnav/topnav.html
+++ b/src/main/webapp/pages/topnav/topnav.html
@@ -7,8 +7,8 @@
             </wm-nav-item>
             <wm-nav-item name="list_profile">
                 <wm-gridcolumn columnwidth="3" name="gridcolumn1">
-                    <wm-picture class="desktop-only" name="picture1" width="30pt" height="30pt" shape="circle" margin="0.4em unset" picturesource="bind:!!Variables.CurrentUserDetails.dataSet.id ? 'services/cx2/Users/'+Variables.CurrentUserDetails.dataSet.id+'/content/photo' : 'resources/images/imagelists/fa-user.png'"
-                    on-click="Variables.goToPage_MyProfile.invoke()" show="bind:!!Variables.CurrentUserDetails.dataSet.id"></wm-picture>
+                    <wm-picture class="desktop-only" name="picture1" width="30pt" height="30pt" shape="circle" margin="0.4em unset" picturesource="bind:'services/cx2/Users/'+Variables.CurrentUserDetails.dataSet.id+'/content/photo'" on-click="Variables.goToPage_MyProfile.invoke()"
+                    show="bind:!!Variables.CurrentUserDetails.dataSet.id" onerror="avatarFallback(event)"></wm-picture>
                 </wm-gridcolumn>
                 <wm-gridcolumn columnwidth="9" name="gridcolumn2">
                     <wm-anchor name="profileLink" iconclass="" caption="My Profile" on-click="Variables.goToPage_MyProfile.invoke()" iconposition="left"></wm-anchor>
